# retrofy

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-dev-index.yml  python-publish.yml  python-test.yml
docs/playground/: app.js  index.html  style.css
docs/playground/tests/: conftest.py  test_smoke.py
example-project/: pyproject.toml
example-project/example_project/: __init__.py  typed_lazy.py
example-project/example_project/tests/: test_example_project.py  test_lazy_imports.py  test_walrus_comprehensions.py  test_walrus_if_while.py  test_walrus_short_circuit.py
retrofy/: __init__.py  __main__.py  _converters.py  _editable_converter_client.py  _editable_converter_server.py  _lazy_runtime.py  _meta_hook_converter.py  _pep517_hooks.py  _pytest_plugin.py  _setup_editable.py  wheel_modifier.py
retrofy/_embedded_runtime/: __init__.py
retrofy/_embedded_runtime/_retrofy/: lazy_runtime.py
retrofy/_payload/: __init__.py
retrofy/_payload/_retrofy/: lazy_runtime.py
retrofy/_retrofy_rt/: __init__.py  lazy_imports.py
retrofy/_transformations/: _backport_engine.py  collections_abc.py  dataclass.py  import_utils.py  lazy_imports.py  match_statement.py  pep585_imports.py  pep810.py  type_alias.py  typing_extensions.py  typing_final.py  walrus.py
retrofy/tests/: test__converters.py  test_integration_match.py  test_lazy_imports.py  test_lazy_imports_mypy.py  test_meta_hook_converter.py  test_out_of_process_editable.py  test_pep517_hooks.py  test_pep810.py  test_pytest_plugin.py  test_setup_editable.py
retrofy/tests/_transformations/: test__match_patterns.py  test__type_alias.py  test__walrus.py  test_collections_abc.py  test_dataclasses.py  test_lazy_imports_native_equivalence.py  test_match_statement.py  test_pep585_imports.py  test_typing_extensions.py  test_typing_final.py
typing_to_the_future/: __init__.py  _converters.py  _meta_hook_converter.py  build_cmd.py  wheel_modifier.py
typing_to_the_future/_transformations/: walrus.py
typing_to_the_future/tests/: test__converters.py  test_typing_to_the_future.py
typing_to_the_future/tests/_transformations/: test__walrus.py
