[build-system]
requires = ["multistage-build>=0.2", "setuptools", "retrofy>=0.3"]
build-backend = "multistage_build:backend"

[tool.multistage-build]
build-backend = "setuptools.build_meta"

[project]
name = "retrofy-test-project"
version = "0.1"
description = "A project full of the latest and greatest Python (syntax) features"
# The syntax in the repository is Python 3.13+, but we use retrofy to support older versions.
requires-python = ">=3.7"
# Retrofy injects ``Requires-Dist: retrofy`` for editable installs (it
# needs retrofy at runtime for the import-time rewriter). PEP 621
# requires this to be opted into via ``dynamic``; wheel installs are
# unaffected.
dynamic = ["dependencies"]

[project.optional-dependencies]
test = [
  "pytest",
]
dev = [
  # Include the "test" and "doc" dependencies in the dev dependencies.
  "example-project[doc,test]",
]

[tool.setuptools.packages.find]
include = ["example_project", "example_project.*"]

# The on-disk source uses post-current-Python syntax that retrofy
# backports at build / import time. Tell ruff to lint it against the
# Python version where that syntax is native, not the ``requires-python``
# floor above (which is the *runtime* floor after retrofy converts the
# source).
[tool.ruff]
target-version = "py315"
